src/objects/Utility_Design_and_Easement__c.object
<CustomObject>
    <fields>
        <fullName>Date_Easement_Received__c</fullName>
        <label>Date Easement Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Easement_Sent__c</fullName>
        <label>Date Easement Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Site_Visit__c</fullName>
        <label>Date of Site Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection__c</fullName>
        <label>Interconnection</label>
        <referenceTo>Interconnection__c</referenceTo>
        <relationshipLabel>Utility Designs and Easements</relationshipLabel>
        <relationshipName>Utility_Designs_and_Easements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Result_of_Site_Visit__c</fullName>
        <label>Result of Site Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Utility Design</fullName>
                </value>
                <value>
                    <fullName>Easement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Easement__c</fullName>
        <label>Type of Easement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Point_of_Contact__c</fullName>
        <label>Utility Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Utility Design and Easement</label>
    <nameField>
        <label>Utility Design and Easement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Designs and Easements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>